deployments/nuget-registry/templates/namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: nugetregistry
  labels:
    istio-injection: enabled
