deployments/nuget-registry/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nugetregistry
spec:
  replicas: 1
  selector:
    matchLabels:
      component: nugetregistry
  template:
    metadata:
        labels:
            component: nugetregistry
    spec:
      containers:
      - name: baget
        image: loicsharma/baget:latest
        resources:
          limits:
            cpu: 200m
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        volumeMounts:
        - name: baget-persistent-storage
          mountPath: /var/baget
      volumes:
        - name: baget-persistent-storage
          persistentVolumeClaim:
            claimName: baget-pv-claim
