deployments/nuget-registry/templates/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nuget-gateway
  namespace: nugetregistry
spec:
  selector:
    app: istio-ingressgateway # This is the default ingress-gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "nuget.fontysbied.nl"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nuget-virual-service
  namespace: nugetregistry
spec:
  gateways:
    - nuget-gateway
  hosts:
    - "nuget.fontysbied.nl" # What inbound Host should be routed. (eg. 'research.bied.nl')
  http:
    - match:
        - uri:
            prefix: /
      route:
        # routes it toward this host. Usually a Kubernetes native 'Service', this should be a FQDN in production
        - destination:
            host: nugetregistry-service
            port:
              number: 8080
